Improve authentication audit logs